[package]
name = "boringdb"
version = "0.4.0"
authors = ["nullchinchilla <nullchinchilla@pm.me>", "Meade Kincke <meade@themelio.org>"]
edition = "2018"
description="Robust, reasonably high-performance key-value database built on SQLite "
license = "ISC"
repository="https://github.com/themeliolabs/boringdb"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies.genawaiter]
version = "0.99.1"
default-features = false

[dependencies.nanorand]
version = "0.6.0"
default-features = false
features = ["std", "tls"]

[dependencies.rusqlite]
version = "0.25"
features = ["bundled"]

[dependencies]
bytes = "1"
flume = "0.10"
itertools = "0.10"
log = "0.4"
parking_lot = "0.11"
priority-queue = "1"
thiserror = "1.0"

[dev-dependencies]
criterion = "0.3"
easy-parallel = "3"
env_logger = "0.8"

[[example]]
name = "write"
path = "examples/write/src/main.rs"