[package]
name = "boringdb"
version = "0.3.12-alpha.0"
authors = ["nullchinchilla <nullchinchilla@pm.me>"]
edition = "2018"
description="Robust, reasonably high-performance key-value database built on SQLite "
license = "ISC"
repository="https://github.com/themeliolabs/boringdb"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.rusqlite]
version = "0.25"
features = ["bundled"]

[dependencies]
bytes="1"
flume="0.10"
parking_lot="0.11"
log="0.4"
# nanorand={version="0.5", default-features=false, features=["std", "tls"]}
thiserror="1.0"
genawaiter={version="0.99.1", default-features=false}
itertools="0.10"
priority-queue="1"
fastrand = "1.5.0"
# lru = "0.6.6"
dashmap = "4.0.2"
# cached={version="0.25", default-features=false}

[dev-dependencies]
criterion = "0.3"
env_logger="0.8"
easy-parallel="3"
once_cell="1"
sled="0.34"

[[bench]]
name = "my_benchmark"
harness = false

