[package]
name = "boringdb"
version = "0.4.2-alpha.0"
authors = ["nullchinchilla <nullchinchilla@pm.me>"]
edition = "2018"
description="Robust, reasonably high-performance key-value database built on SQLite "
license = "ISC"
repository="https://github.com/themeliolabs/boringdb"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.genawaiter]
version = "0.99.1"
default-features = false

[dependencies.rusqlite]
version = "0.26.1"
features = ["bundled"]

[dependencies]
bytes = "1"
# dashmap = "4.0.2"
fastrand = "1.5.0"
flume = "0.10.12"
# itertools = "0.10"
log = "0.4"
parking_lot = "0.11"
# priority-queue = "1"
thiserror = "1.0"
scopeguard = "1.1.0"

[dev-dependencies]
criterion = "0.3"
easy-parallel = "3"
env_logger = "0.9.0"
once_cell = "1"
sled = "0.34"

[[bench]]
name = "my_benchmark"
harness = false
